fixed spacing between project img and text!

--- a/src/index.css
+++ b/src/index.css
@@ -57,9 +57,13 @@ code {
 
 .img_container {
   padding: 10px;
-  width: 90%;
+  width: 85%;
   background-color: rgb(229, 237, 250);
   border-radius: 5px;
+  align-items: center;
+}
+.project_img {
+  height: 150px;
 }
 
 .me_img {
@@ -78,6 +82,7 @@ code {
 }
 
 .video {
+  
   width: 250px;
   width: 90%;
 }
@@ -144,7 +149,6 @@ code {
 
 .github {
   align-self: center;
-  padding-left: 10px;
   color: black;
 }
 
